finalized acclab content scanner
